--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
         <!-- Tools Section-->
         <section class="page-section tools" id="tools">
-            <div class="container">
+            <div class="container text-center">
                 <!-- Portfolio Section Heading-->
                 <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Tools</h2>
                 <div class="divider-section">
@@ -64,6 +64,7 @@
                     <div class="divider-section-icon"><i class="fas fa-star"></i></div>
                     <div class="divider-section-line"></div>
                 </div>
+                <img class="w-50 align-content-center" src="./assets/img/tools.png" alt="/">
             </div>
 
         </section>
@@ -167,7 +168,7 @@
                 </div>
 
                   <!-- Portfolio Section ILUSTRATIONS-->
-                  <h4 class=" text-center text-uppercase text-secondary mb-0 mt-5">Ilustrations</h4>
+                  <h4 class=" text-center text-uppercase text-secondary mb-0 mt-5">Illustrations</h4>
                   <!-- Icon Divider-->
                   <div class="divider-section">
                       <div class="divider-section-line"></div>
@@ -247,8 +248,9 @@
                 </div>
                 <!-- About Section Content-->
                 <div class="row">
-                    <div class="col-lg-4 ms-auto"><p class="lead">I am a novice illustrator as a hobby, I find myself learning and practicing; improving day by day.</p></div>
-                    <div class="col-lg-4 me-auto"><p class="lead">This site presents some of my illustration, editing and design works.</p></div>
+                    <div class="col-lg-4 ms-auto text-justify"><p class="lead">I am a computer engineer that enjoys mixing technology and creativity. I make designs and Illustrations for hobby and I find myself learning and practicing; improving day by day.</p></div>
+                    <div class="col-lg-4 me-auto text-justify"><p class="lead">One of my goals is study a second degree or diploma in graphic design to be able to work like UI designer/developer</p></div>
+                    <div class="col-lg-4 me-auto text-justify"><p class="lead">This site presents some of my illustration, editing and design works.</p></div>
                 </div>
                 
             </div>
